removed code smells